[package]

name = "read_color"
version = "0.0.1"
authors = [
    "bvssvni <bvssvni@gmail.com>"
]
tags = ["color", "parse", "hex", "hexadecimal"]
description = "A simple library for reading hex colors"
license = "MIT"
readme = "README.md"
repository = "https://github.com/pistondevelopers/read_color.git"
homepage = "https://github.com/pistondevelopers/read_color"

[lib]

name = "read_color"
path = "src/lib.rs"

