[package]

name = "read_color"
version = "0.0.2"
authors = [
    "bvssvni <bvssvni@gmail.com>"
]
keywords = ["color", "parse", "hex", "hexadecimal", "piston"]
description = "A simple library for reading hex colors"
license = "MIT"
readme = "README.md"
repository = "https://github.com/pistondevelopers/read_color.git"
homepage = "https://github.com/pistondevelopers/read_color"

[lib]

name = "read_color"
path = "src/lib.rs"

