[package]

name = "read_color"
version = "1.0.0"
authors = [
    "bvssvni <bvssvni@gmail.com>"
]
keywords = ["color", "parse", "hex", "hexadecimal", "piston"]
description = "A simple library for reading hex colors"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/pistondevelopers/read_color.git"
homepage = "https://github.com/pistondevelopers/read_color"

[lib]

name = "read_color"
path = "src/lib.rs"
